[gd_scene load_steps=10 format=2]

[ext_resource path="res://actors/Duck/Duck.tscn" type="PackedScene" id=1]
[ext_resource path="res://actors/Crab/Crab.tscn" type="PackedScene" id=2]
[ext_resource path="res://scene/Progression.gd" type="Script" id=3]
[ext_resource path="res://scene/Spawner.gd" type="Script" id=4]
[ext_resource path="res://Font.tres" type="DynamicFont" id=5]
[ext_resource path="res://FontBig.tres" type="DynamicFont" id=6]
[ext_resource path="res://scene/Stage.gd" type="Script" id=7]
[ext_resource path="res://TextFont.tres" type="DynamicFont" id=8]

[sub_resource type="Environment" id=1]
background_mode = 4
glow_enabled = true
glow_levels/1 = true
glow_levels/2 = true
glow_levels/3 = false
glow_levels/4 = true
glow_levels/5 = false
glow_bloom = 0.02
glow_blend_mode = 0
glow_bicubic_upscale = true
adjustment_enabled = true
adjustment_brightness = 0.82
adjustment_contrast = 1.36
adjustment_saturation = 1.19

[node name="Stage" type="Node2D"]
script = ExtResource( 7 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 1 )

[node name="ScoreTXT" type="Label" parent="."]
margin_left = 488.0
margin_top = 16.0
margin_right = 792.0
margin_bottom = 80.0
custom_fonts/font = ExtResource( 5 )
text = "Score"
align = 1

[node name="Duck" parent="." instance=ExtResource( 1 )]
position = Vector2( 128, 344 )

[node name="Crab" parent="." instance=ExtResource( 2 )]
position = Vector2( 1184, 536 )

[node name="Progression" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="Spawner" type="Node2D" parent="Progression"]
position = Vector2( 1408, 344 )
script = ExtResource( 4 )

[node name="TimeText" type="RichTextLabel" parent="Progression"]
margin_right = 128.0
margin_bottom = 64.0
text = "Time"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FinalText" type="Node2D" parent="."]
z_index = 5

[node name="tldrLabel" type="Label" parent="FinalText"]
margin_left = 488.0
margin_top = 128.0
margin_right = 792.0
margin_bottom = 208.0
custom_fonts/font = ExtResource( 6 )
text = "tldr"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DetailsLabel" type="Label" parent="FinalText"]
margin_left = 320.0
margin_top = 256.0
margin_right = 960.0
margin_bottom = 640.0
custom_fonts/font = ExtResource( 8 )
text = "details"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}
